# autoanalmesg

./: 01_Project_Workflow_Summary.md  02_Admin_Guide.md  03_Client_Overview.md  04_Speaker_Script_EN.docx  PP_MC_FinalReport_EN.pptx  PP_MessageCenter_TechDoc_EN.docx  README.md
app/: launch.vbs  main.py  requirements.txt
app/app/: cache.py  checkpoint.py  classifier.py  config.py  email_reader.py  excel_loader.py  feedback.py  main.py  rules.py  server.py
app/app/static/: academy_style.css  app.js  index.html  style.css
app/installer/: Setup.bat  check_env.ps1  install.ps1  run_setup.bat
pp_mc_python/: README.md  pyproject.toml  requirements.txt
pp_mc_python/src/pp_mc_python/: __init__.py  config.py  context.py  main.py  models.py
pp_mc_python/src/pp_mc_python/pipeline/: __init__.py  classify.py  clean.py  dedup_gate.py  errors.py  notify.py  store.py  update_source.py
pp_mc_python/src/pp_mc_python/sinks/: __init__.py  admin_list.py  email.py
pp_mc_python/src/pp_mc_python/sources/: __init__.py  sharepoint.py
pp_mc_python/tests/: test_classify.py  test_clean.py  test_dedup.py  test_pipeline.py
