[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pp-mc-python"
version = "1.0.0"
description = "Python re-implementation of the PP Message Center Auto-Analysis Power Automate flow"
authors = [{name = "Sunneteam"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openai>=1.50.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "msal>=1.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-mock>=3.14.0"]

[project.scripts]
pp-mc = "pp_mc_python.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
